// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsBar> should render correctly in Classic 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
  padding: 0 24px;
  white-space: nowrap;
  border-radius: 0;
  border-style: solid;
  border-width: 0 0 0 0;
  box-sizing: border-box;
  border-color: #D1DBE8;
  background: #FFF;
}

.c0::after {
  background-color: #D1DBE8;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  z-index: 1;
}

<div
  className="c0"
/>
`;

exports[`<TabsBar> should render correctly in Novo 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
  padding: 0;
  white-space: nowrap;
  border-radius: 0;
  border-style: solid;
  border-width: 0 0 0 0;
  box-sizing: border-box;
  border-color: #E0E0E0;
  background: transparent;
}

.c0::after {
  background: #E0E0E0;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  z-index: 1;
}

<div
  className="c0"
/>
`;

exports[`<TabsBar> should render correctly when is \`dark\` 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
  padding: 0 24px;
  white-space: nowrap;
  border-radius: 0;
  border-style: solid;
  border-width: 0 0 0 0;
  box-sizing: border-box;
  border-color: #2A3A4B;
  background: #2A3A4B;
}

.c0::after {
  background-color: #2A3A4B;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  z-index: 1;
}

<div
  className="c0"
  color="dark"
/>
`;
